# checkle

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASE.md  checkle.toml  deny.toml
.github/workflows/: ci.yml
src/: format_staged.rs  git.rs  lib.rs  main.rs  precommit.rs  suite.rs
tests/: cli.rs  precommit.rs
tests/fixtures/: ansi_colored_output.txt  cargo_clippy_warning.jsonl  cargo_deny_human.txt  cargo_deny_json.jsonl  cargo_doctest_failure.jsonl  cargo_error_rendered.jsonl  cargo_machete_unused.txt  multiple_failures.txt  nextest_human_failure.txt  nextest_json_failure.jsonl  rustfmt_diff.txt
