[package]
name = "checkle"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Run checks with compact, agent-friendly failure output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raine/checkle"
readme = "README.md"
keywords = ["cli", "rust", "testing", "diagnostics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.27.0"
